# TopThirdParty

LineEndingsUnifier/: Line Endings Unifier Settings.txt
QtCipherSqlitePlugin/: README.md
QtCipherSqlitePlugin/windows/qt5.12.5_msvc2017/: sqlitecipher.exp  sqlitecipher.lib  sqlitecipherd.exp  sqlitecipherd.ilk  sqlitecipherd.lib
QtCipherSqlitePlugin/windows/qt5.12.5_msvc2017_64/: sqlitecipher.exp  sqlitecipher.lib  sqlitecipherd.exp  sqlitecipherd.ilk  sqlitecipherd.lib
QtCipherSqlitePlugin/windows/qt5.15.2_msvc2019/: sqlitecipher.exp  sqlitecipher.lib  sqlitecipherd.exp  sqlitecipherd.ilk  sqlitecipherd.lib
QtCipherSqlitePlugin/windows/qt5.15.2_msvc2019_64/: sqlitecipher.exp  sqlitecipher.lib  sqlitecipherd.exp  sqlitecipherd.ilk  sqlitecipherd.lib
ThreadPool/: CMakeLists.txt
Visual Studio 2022/: Exported-2024-06-27.vssettings  README.md
Visual Studio 2022/Code Snippets/Visual C++/: dump.snippet  fora.snippet  main.snippet  qmain.snippet  qmlmain.snippet  u8.snippet  w32.snippet  wregion.snippet
Visual Studio 2022/vsix/LineEndingsUnifier/: Line Endings Unifier Settings.txt
lib60870/: CMakeLists.txt
lib60870/2.3.2/lib60870-C/: CMakeLists.txt
lib60870/2.3.2/lib60870-C/src/: CMakeLists.txt
