set(BUILD_EXAMPLES OFF)
set(BUILD_TESTS OFF)
add_subdirectory(2.3.2/lib60870-C)  # export _THIRDPARTY_LIB60870_INCLUDE_DIRS
set(THIRDPARTY_LIB60870_INCLUDE_DIRS ${_THIRDPARTY_LIB60870_INCLUDE_DIRS} PARENT_SCOPE)
if(WIN32)
	set(THIRDPARTY_LIB60870_LIBS "${LIBRARY_OUTPUT_PATH}/lib60870-shared.lib" PARENT_SCOPE)
elseif(UNIX)
	set(THIRDPARTY_LIB60870_LIBS "${LIBRARY_OUTPUT_PATH}/liblib60870-shared.so" PARENT_SCOPE)
endif()
