set(BUILD_EXAMPLES OFF)
set(BUILD_TESTS OFF)
add_subdirectory(2.3.2/lib60870-C)  # export _THIRDPARTY_LIB60870_INCLUDE_DIRS

set(THIRDPARTY_LIB60870_INCLUDE_DIRS ${_THIRDPARTY_LIB60870_INCLUDE_DIRS} PARENT_SCOPE)
set(THIRDPARTY_LIB60870_LIB_DIRS ${LIBRARY_OUTPUT_PATH} PARENT_SCOPE)
if(WIN32)
	set(THIRDPARTY_LIB60870_LIBS lib60870-shared.lib PARENT_SCOPE)
elseif(UNIX)
	set(THIRDPARTY_LIB60870_LIBS ${CMAKE_SHARED_LIBRARY_PREFIX}lib60870-shared.so PARENT_SCOPE)
endif()

# export
# THIRDPARTY_LIB60870_INCLUDE_DIRS
# THIRDPARTY_LIB60870_LIB_DIRS
# THIRDPARTY_LIB60870_LIBS
